...
    await signIn()
  }

  return (
    <Screen preset="fixed" contentContainerStyle={$screenContentContainer} safeAreaEdges={["top"]}>
      <Text
        text="Hi, enthusiastic learner! Welcome to this world"
        preset="heading"
        style={$topText}
      />
      <TouchableOpacity
        testID="google-login-icon"
        disabled={isLoading}
        onPress={handleLogin}
        style={$iconContainer}
        activeOpacity={0.8}
      >
        <Icon icon="google" />
...
