...
    ok: "OK!",
    cancel: "Cancel",
    back: "Back",
    logOut: "Log Out",
  },
  homeScreen: {
    voice: "Insta Talk",
    learning: "Learning Materials",
    ls: "Live Streams",
    lsBtn: "Go Live!",
  },
  accountScreen: {
    position: "Position:",
...
  leaderBoardScreen: {
    searchPlaceholder: "Search user by username...",
  },
  welcomeScreen: {
    postscript:
      "psst  — This probably isn't what your app looks like. (Unless your designer handed you these screens, and in that case, ship it!)",
    readyForLaunch: "Your app, almost ready for launch!",
    exciting: "(ohh, this is exciting!)",
    letsGo: "Let's go!",
  },
  errorScreen: {
    title: "Something went wrong!",
    friendlySubtitle:
...
