#flow: Login
#intent:
# Open up our app and use the default credentials to login
# and navigate to the demo screen

appId: com.englishsphere # the app id of the app we want to test
# You can find the appId of an Ignite app in the `app.json` file
# as the "package" under the "android" section and "bundleIdentifier" under the "ios" section
---
- clearState # clears the state of our app (navigation and authentication)
- launchApp # launches the app
- assertVisible: "Your app, almost ready for launch!"
- tapOn:
    id: "next-screen-button"
- assertVisible: "Hi, enthusiastic learner! Welcome to this world"
- tapOn:
    id: "google-login-icon"
- assertVisible: "Choose an account"
- tapOn:
    id: "com.google.android.gms:id/container"
    index: 0
- assertVisible: "Insta Talk"
